--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>TEST</h1>
 <p>git diff</p>
 <p>someone's edit</p>
-<p>conflict this is master</p>
+<p>conflict I'm master</p>
 <p>conflict I'm feature.</p>
 <p>pull request</p>
